# ft-call-me-maybe

./: .gitignore  Makefile  README.md  main.py  pyproject.toml  subject.md  todo.md  vocab.json
benchmark/: flamegraph.py  get_logit_mask.prof  init.prof
data/input/: functions_definition.json
llm_sdk/: __init__.py
src/: __main__.py  constrained_decoder.py  constrained_json_decoder.py  constrained_string_decoder.py  function.py  function_call_generator.py  function_selector.py  main.py  state.py  vocabulary.py
src/decoding/: __init__.py  common.py  constrained_json_decoder.py  constrained_string_decoder.py  state.py
src/llm_sdk/: __init__.py
src/models/: function_call.py  function_definition.py
src/parsing/: arguments.py
test/: constrained_decoder_test.py  constrained_decoding_test.py  constrained_json_decoder_test.py  constrained_string_decoder_test.py  state_test.py
test/parsing/: arguments_test.py
