[project]
name = "ft-call-me-maybe"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "huggingface-hub>=1.4.1",
    "numpy>=2.4.2",
    "pydantic>=2.12.5",
    "torch>=2.10.0",
    "transformers>=5.2.0",
]

[dependency-groups]
dev = [
    "flameprof>=0.4",
    "pyinstrument>=5.0",
    "pytest>=9.0.2",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", marker = "sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

